kubernetes/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: web
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
