kubernetes/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
      name: http
  type: NodePort
